--- a/BuscaCep/BuscaCep/BuscaCep.csproj
+++ b/BuscaCep/BuscaCep/BuscaCep.csproj
@@ -7,4 +7,9 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.446417" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\" />
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
 </Project>
