--- a/BuscaCep/BuscaCep/BuscaCep.csproj
+++ b/BuscaCep/BuscaCep/BuscaCep.csproj
@@ -9,7 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\" />
-    <Folder Include="ViewModels\" />
+    <EmbeddedResource Update="Pages\BuscaCepPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
